don't show lower widgets on mobile <500px, fixes #83

--- a/style.scss
+++ b/style.scss
@@ -4177,8 +4177,8 @@ body {
 			display: none;
 		} 
 	} 
-	.flex-container { 
-		display: none; /* don't show the version with images */ 
+	.flex-container, .widget_mla_bp_groups_widget, .widget_bp_core_recently_active_widget, .widget_cbox_bp_blogs_recent_posts_widget { 
+		display: none; 
 	} 
 } 
 @media only screen and (max-width: 320px) {
